thrasher magazine themed colors

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header class="header">
             <h1 class="logo">SKATE<span class="xp">XP</span></h1>
             <div class="header-right">
-                <div class="user-level">LVL 12</div>
+                <div class="user-level">LVL ?</div>
                 <button class="login-btn-header">LOGIN</button>
             </div>
         </header>
@@ -20,13 +20,13 @@
         <!-- Main Stats Section -->
         <section class="stats-grid">
             <div class="stat-card streak">
-                <div class="stat-number">47</div>
+                <div class="stat-number">?</div>
                 <div class="stat-label">DAY STREAK</div>
                 <div class="streak-fire">🔥</div>
             </div>
             
             <div class="stat-card xp-card">
-                <div class="stat-number">2,840</div>
+                <div class="stat-number">?</div>
                 <div class="stat-label">TOTAL XP</div>
                 <div class="xp-bar">
                     <div class="xp-progress"></div>
