temp login button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <h1 class="logo">SKATE<span class="xp">XP</span></h1>
             <div class="header-right">
                 <div class="user-level">LVL ?</div>
-                <button class="login-btn-header">LOGIN</button>
+                <a class="login-btn-header" href="/login.html">Login</a> <!--Temporary login button to link-->
+                <button class="login-btn-header">LOGIN</button> 
             </div>
         </header>
 
@@ -40,7 +41,7 @@
                 <span class="btn-icon">🛹</span>
                 I SKATED TODAY
             </button>
-            <p class="last-session">Last session: 2 hours ago</p>
+            <p class="last-session">Last session: ? hours ago</p>
         </section>
 
         <!-- Tricks Tracker -->
@@ -62,25 +63,25 @@
             <div class="tricks-grid">
                 <div class="trick-card">
                     <div class="trick-name">KICKFLIP</div>
-                    <div class="trick-consistency">85%</div>
+                    <div class="trick-consistency">?%</div>
                     <div class="trick-bar">
-                        <div class="trick-progress" style="width: 85%"></div>
+                        <div class="trick-progress" style="width: 0%"></div>
                     </div>
                 </div>
                 
                 <div class="trick-card">
                     <div class="trick-name">HEELFLIP</div>
-                    <div class="trick-consistency">62%</div>
+                    <div class="trick-consistency">?%</div>
                     <div class="trick-bar">
-                        <div class="trick-progress" style="width: 62%"></div>
+                        <div class="trick-progress" style="width: 0%"></div>
                     </div>
                 </div>
                 
                 <div class="trick-card">
                     <div class="trick-name">TREFLIP</div>
-                    <div class="trick-consistency">23%</div>
+                    <div class="trick-consistency">?%</div>
                     <div class="trick-bar">
-                        <div class="trick-progress" style="width: 23%"></div>
+                        <div class="trick-progress" style="width: 0%"></div>
                     </div>
                 </div>
             </div>
@@ -90,11 +91,11 @@
         <section class="achievements-section">
             <h2 class="section-title">RECENT BADGES</h2>
             <div class="badges-grid">
-                <div class="badge earned">
+                <div class="badge locked">
                     <div class="badge-icon">🏆</div>
                     <div class="badge-name">WEEK WARRIOR</div>
                 </div>
-                <div class="badge earned">
+                <div class="badge locked">
                     <div class="badge-icon">⚡</div>
                     <div class="badge-name">SPEED DEMON</div>
                 </div>
